--- a/docs/src/data/schemas/issue-section.yaml
+++ b/docs/src/data/schemas/issue-section.yaml
@@ -37,32 +37,32 @@ properties:
         the issues view.
   filters:
     title: Issue Filters
-    description: Defines the GitHub search filters for the issues in the section's table.
+    description: Defines the provider-agnostic filter DSL for the issues in the section's table.
     type: string
     schematize:
       weight: 2
       details: |
-        This setting defines the [GitHub search filters][01] for the issues in the section's table.
+        This setting defines the provider-agnostic filter DSL for the issues in the section's table.
 
-        Don't specify `is:issue` for this setting. The dashboard always adds that filter for issue
-        sections.
+        Don't specify `type = "issue"` for this setting. The dashboard always adds that filter for
+        issue sections.
 
-        You can define any combination of search filters. To make it easier to read and maintain
-        your filters, we recommend using the `>-` syntax after the `filter` key and writing one
+        You can define any combination of filters. To make it easier to read and maintain your
+        filters, we recommend using the `>-` syntax after the `filters` key and writing one
         filter per line.
 
         For example:
 
         ```yaml
         - title: Involved
-          filter: >-
-            is:open
-            involves:@me
-            -author:@me
-            updated>={{ nowModify "-2w" }}
+          filters: >-
+            state = "open"
+            involves = "me"
+            author != "me"
+            updated in last(2w)
         ```
 
-        For more information about writing filters for searching GitHub, see [Searching].
+        For more information about writing filters, see [Searching].
 
         [Searching]: /configuration/searching
   layout:
